--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,102 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap');
+:root {
+    --primary-color: rgb(184, 17, 17);
+}
 .container {
     display: flex;
     flex-direction: column;
     width: 50vw;
-
+    margin: auto;
 }
+body {
+    text-align: center;
+    font-family:'Source Serif Pro', serif;
+    background-repeat: no-repeat;
+    background-position:top;
+    background-image: url(https://thumbs.dreamstime.com/z/supermarket-cash-desk-female-cashier-young-woman-food-goods-storage-hand-shopping-cart-uniform-apron-behind-equipment-114201903.jpg);
+}
+.heading {
+    color: var(--primary-color);
+    font-size: 2rem;
+    margin-top: 4rem;
+}
+.description {
+    font-size: 1.3rem;
+    padding: auto;
+}
+
+#btn-check {
+    padding: 0.5rem 1rem;
+    margin: 1rem auto;
+    border-radius: 0.5rem;
+    background-color: var(--primary-color);
+    color: white;
+    font-size: larger;
+    border: none;
+}
+label {
+    padding: 0.5rem;
+    font-size: larger;
+    font-weight: bolder;
+}
+input {
+     margin: auto;
+     padding: 0.5rem;
+     border-radius: 0.5rem;
+     border: 1px solid var(--primary-color);
+     font-size: larger;
+
+ }
+ #error-message{
+     font-size: larger;
+ }
+ #cash-return-table {
+     border: 1px solid var(--primary-color);
+     border-collapse: collapse;
+     margin: auto;
+     width: 87%;
+ }
+ #cash-return-table caption {
+     margin: 1rem auto;
+     padding: 0rem;
+     font-size: larger;
+     font-weight: bolder;
+ }
+ tr{
+    border: 1px solid var(--primary-color);
+    padding: 2rem;
+ }
+ th,td{
+    border: 2px solid var(--primary-color);
+    padding: 0.4;
+    width: 0%;
+ }
+
+ footer {
+    text-align: center;
+  }
+  
+  footer p {
+    font-size: large;
+    text-align: center;
+    margin-top: 4rem;
+  }
+  
+  .footer-list {
+    margin: auto;
+    padding-inline-start: 0px;
+  }
+  
+  a,
+  img,
+  li {
+    display: inline;
+    text-decoration: none;
+    color: var(--primary-color);
+  }
+  
+  img {
+    width: 30px;
+    padding: 0.5rem;
+
+  }
