added alert message for incorrect input

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ input {
  }
  #error-message{
      font-size: larger;
+     font-weight: bold;
  }
  #cash-return-table {
      border: 1px solid var(--primary-color);
